# clin-evidence

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: api-reference.md  architecture.md  configuration.md  deployment.md  development.md  troubleshooting.md
examples/basic-query/: README.md  query_example.py
examples/document-ingestion/: README.md  ingest_example.py
examples/medical-imaging/: README.md  imaging_example.py
src/clinevidence/: __init__.py  dependencies.py  main.py  middleware.py  settings.py
src/clinevidence/agents/: __init__.py  conversation.py  orchestrator.py  safety_filter.py  state.py
src/clinevidence/agents/imaging/: __init__.py  brain_mri.py  chest_xray.py  modality_detector.py  router.py  skin_lesion.py
src/clinevidence/agents/rag/: __init__.py  answer_synthesizer.py  document_extractor.py  document_formatter.py  knowledge_store.py  pipeline.py  query_enricher.py  result_ranker.py
src/clinevidence/agents/search/: __init__.py  evidence_searcher.py  pubmed_client.py  search_processor.py  tavily_client.py
src/clinevidence/api/: __init__.py  chat.py  media.py  speech.py
src/clinevidence/models/: __init__.py  requests.py  responses.py
src/clinevidence/scripts/: __init__.py  ingest.py
tests/: conftest.py
tests/integration/: test_chat_endpoint.py  test_rag_pipeline.py
tests/unit/: test_modality_detector.py  test_query_enricher.py  test_result_ranker.py  test_safety_filter.py
