[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clinevidence"
version = "1.0.0"
description = "Clinical Evidence Retrieval & Diagnostic Support for ICU Teams"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = [
    "medical-ai",
    "rag",
    "clinical-decision-support",
    "icu",
    "langgraph",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "itsdangerous>=2.2.0",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.20",
    "langchain-core>=0.3.44",
    "langchain-openai>=0.3.0",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.3.9",
    "qdrant-client>=1.13.0",
    "docling>=2.31.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.49.0",
    "sentence-transformers>=3.4.0",
    "opencv-python-headless>=4.11.0",
    "Pillow>=11.1.0",
    "tavily-python>=0.5.0",
    "elevenlabs>=1.54.0",
    "pydub>=0.25.0",
    "httpx>=0.27.0",
    "aiohttp>=3.11.0",
    "slowapi>=0.1.9",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "requests>=2.32.0",
    "werkzeug>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "respx>=0.21.0",
]

[project.scripts]
clinevidence = "clinevidence.main:run"
clinevidence-ingest = "clinevidence.scripts.ingest:main"

[tool.hatch.build.targets.wheel]
packages = ["src/clinevidence"]

[tool.ruff]
line-length = 79
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = ["B008", "N818"]

[tool.ruff.lint.isort]
known-first-party = ["clinevidence"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = false  # Stubs vary by install; avoids false positives
# Note: strict=true is intentionally omitted — FastAPI route decorators,
# Pydantic BaseModel subclassing, and PyTorch nn.Module all produce
# unavoidable false positives under strict mode without vendored stubs.

# Skip slow or stub-less third-party packages to keep CI fast
[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
    "transformers.*",
    "sentence_transformers.*",
    "docling.*",
    "langchain.*",
    "langchain_core.*",
    "langchain_openai.*",
    "langchain_qdrant.*",
    "langgraph.*",
    "qdrant_client.*",
    "elevenlabs.*",
    "tavily.*",
    "slowapi.*",
    "prometheus_fastapi_instrumentator.*",
    "cv2.*",
    "PIL.*",
    "werkzeug.*",
    "pydub.*",
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=src/clinevidence",
    "--cov-report=term-missing",
    "--cov-fail-under=48",
]

[tool.coverage.run]
source = ["src/clinevidence"]
omit = ["*/tests/*", "*/__init__.py"]
